--- a/config.properties
+++ b/config.properties
@@ -1,3 +1,7 @@
 project_ID = apps-api-dp-us-npe-ae82
 
+project_ID_fake = crucial-oarlock-283420
+
+jarURL=gs://java-templates/api-reporting-pipelines-complex-bundled-0.0.0.1.jar
+jarName=api-reporting-pipelines-complex-bundled-0.0.0.1.jar
 Service_Account=
